# hydrascreen

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE.txt  PRIVACY_POLICY.txt  PrivacyPolicy.txt  README.md  TermsOfService.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: bump_version.yml  run_tests.yml
hydrascreen/: __init__.py  api.py  predictor.py
hydrascreen/tests/: conftest.py  test_api.py  test_predictor.py
paper/: README.md  environment.yaml
paper/code_release/: data_module.py  inference.py  molgrid_model.py  preprocessor.py  utils.py
paper/code_release/typers/: ligtyper.typedef  rectyper.typedef
paper/example_input/ligands/: 456c_docked.sdf  4a6v_docked.sdf
