[metadata]
name = hydrascreen
version = 0.0.3
description = Hydrascreen Python package.

classifiers =
    Programming Language :: Python :: 3.9 :: 3.10 :: 3.11
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0.2,<3
    requests>=2.31.0,<3


[options.extras_require]
dev =
    appengine-python-standard>=1.1.2,<2 # https://stackoverflow.com/a/76177300
    black==23.3.0
    build==0.10.0
    bump2version==1.0.1
    flake8==6.0.0
    mypy==1.4.1
    pip-tools==6.13.0
    pre-commit==3.3.3
    pytest==7.4.0
    setuptools==68.0.0


[options.packages.find]
where = .
exclude =
    hydrascreen/tests*


[flake8]
max-line-length = 150
