[metadata]
name = hydrascreen
version = 0.0.8
author = Ro5 Inc.
author_email = support@ro5.ai
license_file = LICENSE.txt
license = Non-commercial
description = Hydrascreen Python package.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/Ro5-ai/hydrascreen
    Medium = https://medium.com/@ro5.ai


classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.0.2,<3
    requests>=2.31.0,<3


[options.package_data]
mypackage = PRIVACY_POLICY.txt, TERMS_OF_SERVICE.txt


[options.extras_require]
dev =
    appengine-python-standard>=1.1.2,<2 # https://stackoverflow.com/a/76177300
    black==23.3.0
    build==1.0.3
    bump2version==1.0.1
    flake8==6.0.0
    mypy==1.4.1
    pip-tools==7.4.0
    pre-commit==3.3.3
    pytest==7.4.0
    setuptools==68.0.0


[options.packages.find]
where = .
exclude =
    hydrascreen/tests*


[flake8]
max-line-length = 150
exclude =
    .git,
    __pycache__,
    .venv,
    paper
